--- a/IntuitERP/Viwes/CadastroProduto.xaml
+++ b/IntuitERP/Viwes/CadastroProduto.xaml
@@ -119,11 +119,13 @@
                     <!-- Fornecedor Principal -->
                     <VerticalStackLayout>
                         <Label Text="Fornecedor Principal:" Style="{StaticResource FormLabel}" />
-                        <Border Style="{StaticResource FormField}">
-                            <Picker x:Name="FornecedorPicker" Title="Selecione o Fornecedor Principal" Style="{StaticResource InputPicker}">
-                                <!-- ItemsSource should be bound from C# code-behind -->
-                            </Picker>
-                        </Border>
+                        <!-- Forbnecedor -->
+                        <Grid ColumnDefinitions="*, Auto" ColumnSpacing="10">
+                            <Border Grid.Column="0" Style="{StaticResource FormField}">
+                                <Entry x:Name="FornecedorDisplayField" Placeholder="Selecione a Cidade" IsReadOnly="True" Style="{StaticResource InputField}" />
+                            </Border>
+                            <Button x:Name="SelectFornecedorButton" Grid.Column="1" Text="Selecionar" Clicked="SelectFornecedorButton_Clicked" Style="{StaticResource PrimaryActionButton}" HeightRequest="50" CornerRadius="8" />
+                        </Grid>
                     </VerticalStackLayout>
 
                     <!-- Data de Cadastro & Status -->
