--- a/IntuitERP/Viwes/CadastrodeCompra.xaml
+++ b/IntuitERP/Viwes/CadastrodeCompra.xaml
@@ -34,10 +34,19 @@
                             <DatePicker Grid.Row="1" Grid.Column="0" x:Name="DataCompraPicker" FontSize="16" Format="dd/MM/yyyy" />
                             <Label Grid.Row="0" Grid.Column="1" Text="Hora da Compra:" FontSize="16" />
                             <TimePicker Grid.Row="1" Grid.Column="1" x:Name="HoraCompraPicker" FontSize="16" Format="HH:mm" />
-                            <Label Grid.Row="2" Grid.Column="0" Text="Fornecedor:" FontSize="16" />
-                            <Picker Grid.Row="3" Grid.Column="0" x:Name="FornecedorPicker" Title="Selecione o Fornecedor" FontSize="16" />
-                            <Label Grid.Row="2" Grid.Column="1" Text="Vendedor:" FontSize="16" />
-                            <Picker Grid.Row="3" Grid.Column="1" x:Name="VendedorPicker" Title="Selecione o Vendedor" FontSize="16" />
+                            <Label Text="Fornecedor" />
+                            <Frame Style="{StaticResource FrameStyle}">
+                                <Grid ColumnDefinitions="*,Auto">
+                                    <Entry x:Name="FornecedorDisplayEntry" IsEnabled="False" Placeholder="Selecione um Fornecedor" />
+                                    <Button x:Name="SelectFornecedorButton" Text="..." Clicked="SelectFornecedorButton_Clicked" Grid.Column="1" WidthRequest="50" />
+                                </Grid>
+                            </Frame>
+                            <Frame Style="{StaticResource FrameStyle}">
+                                <Grid ColumnDefinitions="*,Auto">
+                                    <Entry x:Name="VendedorDisplayEntry" IsEnabled="False" Placeholder="Selecione um Vendedor" />
+                                    <Button x:Name="SelectVendedorButton" Text="..." Clicked="SelectVendedorButton_Clicked" Grid.Column="1" WidthRequest="50" />
+                                </Grid>
+                            </Frame>
                             <Label Grid.Row="4" Grid.Column="0" Text="Forma de Pagamento:" FontSize="16" />
                             <Picker Grid.Row="5" Grid.Column="0" x:Name="FormaPagamentoPicker" Title="Selecione..." FontSize="16" />
                             <Label Grid.Row="4" Grid.Column="1" Text="Status da Compra:" FontSize="16" />
