--- a/IntuitERP/Viwes/Modals/ModalPicker.xaml
+++ b/IntuitERP/Viwes/Modals/ModalPicker.xaml
@@ -9,9 +9,10 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <VerticalStackLayout Grid.Row="0" Spacing="10">
-                <SearchBar Placeholder="Search items..."
+            <Grid RowDefinitions="Auto, *, Auto" Padding="10" Grid.Row="0">
+                <SearchBar Placeholder="Pesquisar itens..."
                            CancelButtonColor="Gray"
+                            Grid.Row="0"
                            SearchCommand="{Binding SearchCommand}"
                            TextChanged="OnSearchBarTextChanged"
                            x:Name="SearchInput">
@@ -37,6 +38,7 @@
                           ItemsSource="{Binding FilteredItems}"
                           ItemSelected="OnItemSelected"
                           HasUnevenRows="True"
+                          Grid.Row="1"
                           SelectionMode="Single">
 
                     <VisualStateManager.VisualStateGroups>
@@ -76,7 +78,7 @@
                         </Style>
                     </ListView.Resources>
                 </ListView>
-            </VerticalStackLayout>
+            </Grid>
 
             <HorizontalStackLayout Grid.Row="1" Spacing="10" HorizontalOptions="FillAndExpand" Margin="0,10,0,0">
                 <Button Text="Selecionar"
